fix(infotip css) : Increased width to avoid overlapping with WI row. (#2642)

--- a/src/assets/stylesheets/shared/_utilities.less
+++ b/src/assets/stylesheets/shared/_utilities.less
@@ -28,7 +28,9 @@
 }
 //infotip css
 .popover-container {
-  min-width: 235px;
+  //changing minimum width from 235px to 375px to avoid overlapping of workitem rows 
+  //in the planner list with the infotip popover.
+  min-width: 375px;
   cursor: default;
 }
 .infoArea:hover,
